chore: fix dark mode

--- a/docs/.sphinx/_static/swagger-override.css
+++ b/docs/.sphinx/_static/swagger-override.css
@@ -72,3 +72,15 @@
 .swagger-ui .information-container .url {
     display: none;
 }
+
+@media not print {
+    body[data-theme="dark"] {
+        .swagger-ui {
+            filter: invert(88%) hue-rotate(180deg);
+        }
+
+        .swagger-ui .microlight {
+            filter: invert(100%) hue-rotate(180deg);
+        }
+    }
+}
